# k4megat

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  TODO.org  readme.md  test.cpp
analysis/: CMakeLists.txt  CMakeLists_root.txt
analysis/dict/: analysis_dict.h  analysis_selection.xml
analysis/doc/: readme.org
analysis/include/Analysis/: Algorithms.h.bak  GeoUtils.h  IdConverter.h  LinkDef.h.bak  MCParticle.h  MCParticle.h.bak  SimCalo.h  SimTracker.h  SimpleLogger.h  Tracker.h  Utils.h  utility.hxx  utility_legacy.hxx
analysis/include/fmt/: args.h  chrono.h  color.h  compile.h  core.h  format-inl.h  format.h  os.h  ostream.h  printf.h  ranges.h  std.h  xchar.h
analysis/include/spdlog/: async.h  async_logger-inl.h  async_logger.h  common-inl.h  common.h  formatter.h  fwd.h  logger-inl.h  logger.h  pattern_formatter-inl.h  pattern_formatter.h  spdlog-inl.h  spdlog.h  stopwatch.h  tweakme.h  version.h
analysis/python/: README.org  detail.py
analysis/python/megat/: __init__.py  detail.py
analysis/python/mgana/: ana_build.py  ana_builder.py  ana_init.py  ana_plot.py  ana_run.py  cmd_parsers.py  logger.py  test_run.py  utility.py
analysis/python/mgana/templates/: CMakeLists.txt  Package.cc  Package.h  analysis_cfg.py  analysis_final.py  analysis_plot.py  analysis_stage1.py  classes.h  env.json
analysis/scripts/: demo_fillx.C  demo_fillx.py  demo_tpc_pos.C  demo_tpc_pos_raw.C  test_loadGeometry.C
analysis/src/: Algorithms.cpp.bak  GeoUtils.cpp  IdConverter.cpp  MCParticle.cpp.bak  SimCalo.cpp
cmake/: GitHooks.cmake  MegatMacro.cmake  k4megatConfig.cmake  thismegat.sh  thismegat_analysis.sh  thismegat_env.sh  thismegat_internal.sh  thismegat_only.sh
cmake/utils/: git_pre-commit.in  reformat-files.sh
detector/: CMakeLists.txt
detector/common/: CMakeLists.txt
detector/common/src/: DetUtils.cpp  Geant4CaloHit.cpp  Geant4PreDigiTrackHit.cpp
detector/geometry/: CMakeLists.txt
detector/geometry/compact/: CZT.xml  CZT_layer.xml  CZT_side.xml  Megat.xml  Passives_simple.xml  Passives_test.xml  Passives_v1.xml  TPC.xml  TPC_readout.xml  TPC_v1.xml  dump.C
detector/geometry/compact/ab/: Acd.xml  AlphaBeta.xml  Segmentation.xml  Tpc.xml  dump.C
detector/geometry/gdml/: megat.gdml
detector/geometry/root_model/: d4export.gltf  megat.gltf  megat.root  megat_layer.gltf
detector/geometry/src/: DiagonalStrip_segmt.cpp  GenericSurfaceInstaller.cpp  PlanarAssembly_geo.cpp  RenameWorldVolume_plugin.cpp  SegmentationUtils.h  SimlpeTpc_geo.cpp  Tpc_OneSide_geo.cpp
detector/scripts/: export_geomgr.C  find_volume.py  geom_server.C
detector/sensitive/: CMakeLists.txt
detector/sensitive/src/: AggregateCalorimeterSD.cpp  BirksLawCalorimeterSD.cpp  FullParticleAbsorptionSD.cpp  GflashCalorimeterSD.cpp  SDWrapper.cpp  SimpleCalorimeterSD.cpp  SimpleDriftChamber.cpp  SimpleTrackerSD.cpp
detector/src/: MonoAssemly_geo.cpp  PlanarAssembly_geo.cpp  PlanarAssembly_plain_geo.cpp
digi/components/: CMakeLists.txt
digi/components/calo/: CaloSimpleSmearAlg.cpp  CaloSimpleSmearAlg.h
digi/components/tpc/: TpcDriftAlg.cpp  TpcDriftAlg.h  TpcSamplingAlg.cpp  TpcSamplingAlg.h  TpcSegmentAlg.cpp  TpcSegmentAlg.h  TpcSimpleSmearAlg.cpp  TpcSimpleSmearAlg.h  TpcTestDigi.cpp  TpcTestDigi.h  task.org
digi/options/: compton_digi.py  full_digi.py  simple_digi.py  test_calo_smear.py  test_full_digi.py  test_sim.py  test_tpc_digi.py  test_tpc_drift.py  test_tpc_sampling.py  test_tpc_segmentation.py  test_tpc_smear.py  tpc_seg_test.xml
digi/options/test/: test_calo_smear.py  test_tpc_digi.py  test_tpc_drift.py  test_tpc_sampling.py  test_tpc_segmentation.py  test_tpc_smear.py
digi/scripts/: exportHits.C  exportHits_tpc.C
doc/: CMakeLists.txt  arch.md  arch.org  contrib_guide.md  contrib_guide.org  data_model.org  detector.org  gaudi_guide.org  parallel.org  sim.md  sim.org
geometry/cad_model/: vessel.stl
geometry/compact/: CZT_layer.xml  CZT_mono.xml  DDEve.xml  Megat.xml  Passives.xml  README.md  TPC.xml
geometry/material/: materials.xml
k4libs/: CMakeLists.txt
mypackage/: CMakeLists.txt  test.cpp
mypackage/components/: MegatTest_Histogram.cpp  MegatTest_Histogram.h
scripts/simulation/check/: etrack.C
scripts/simulation/gaudi/: test_sim.py
sim/: CMakeLists.txt  readme.org
sim/components/: CMakeLists.txt
sim/components/actions/: SimFastSimActions.cpp  SimFastSimActions.h  SimFullSimActions.cpp  SimFullSimActions.h
sim/components/core/: GeoSvc.cpp  GeoSvc.h  SimAlg.cpp  SimAlg.h  SimDD4hepDetector.cpp  SimDD4hepDetector.h  SimGdmlDetector.cpp  SimGdmlDetector.h  SimSvc.cpp  SimSvc.h
sim/components/fast/: SimFastSimCalorimeterRegion.cpp  SimFastSimCalorimeterRegion.h  SimFastSimHistograms.cpp  SimFastSimHistograms.h  SimFastSimPhysicsList.cpp  SimFastSimPhysicsList.h  SimFastSimTrackerRegion.cpp  SimFastSimTrackerRegion.h  SimGflashHomoCalo.cpp  SimGflashHomoCalo.h  SimGflashSamplingCalo.cpp  SimGflashSamplingCalo.h  SimParticleSmearFormula.cpp  SimParticleSmearFormula.h  SimParticleSmearRootFile.cpp  SimParticleSmearRootFile.h  SimParticleSmearSimple.cpp  SimParticleSmearSimple.h
sim/components/field/: SimConstantMagneticFieldTool.cpp  SimConstantMagneticFieldTool.h
sim/components/generator/: SimComptonEventGeneratorTool.cpp  SimComptonEventGeneratorTool.h  SimComptonSimpleGenerator.cpp  (+12 more)
sim/interface/: CMakeLists.txt
sim/kernel/: CMakeLists.txt
sim/options/: mergeCells.py  mergeLayers.py  positions_endcap.py  positions_inclinedEcal.py  positions_negativeEndcap.py  positions_tracker.py  redoSegmentationPhiEta.py  redoSegmentationXYZ.py  rewriteBitfield.py
sim/sensitive/: CMakeLists.txt
sim/wrapper/: CMakeLists.txt
test/scripts/: check_tpc_pos.C  print_joboption.py  print_joboption_upt.py  print_metadata.C  test_geom.py
tests/options/: test_histogram.py
tutorial/: CMakeLists.txt
tutorial/components/: MgTut_EDMIO.cpp  MgTut_EDMIO.h  MgTut_RdmNumber.cpp  MgTut_RdmNumber.h
tutorial/doc/: tasks.org
tutorial/options/: tut_edmio.py  tut_rdm.py  tut_sim.py
tutorial/templates/: AlgTemplate.cpp  AlgTemplate.h
(+217 files in other folders)
